--- a/source/post/2021/2108.md
+++ b/source/post/2021/2108.md
@@ -9,102 +9,102 @@ id: 2108
 tags: 
   - protobuf
   - arena
-title: 关于重新设计libatbus通信组件的一些思考
+title: C++20 Text Formatting/fmtlib 适配问题小记
 type: post
 ---
 
 ## 前言
 
-我在好多年前设计了 [libatbus][2] 用于处理服务器间的通信问题。
+http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2019/p0645r10.html#format.formatter
+http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2021/p2216r3.html
+https://en.cppreference.com/w/cpp/utility/format
 
-## 整体结构
+## 枚举类型的差异
 
-## 消息协议和缓冲区
+## Visual Studio 2019 version 16.10(MSVC 1929）的BUG
 
-协议头类似 https://github.com/v2fly/v2ray-core/blob/master/proxy/vless/encoding/encoding.go
+`format_to_n` : `size()` -> `_Count()`
 
-+ 内部节点使用UUID
-+ 不再集成服务发现，由外部模块提供。（名字和ID映射到UUID）
-+ 协议层集成支持扩展（可用于链路跟踪和上层扩展路由规则）
-+ 代理支持
+## Visual Studio 2019 version 16.11 的变化
 
-### 共享缓冲区
+https://github.com/microsoft/STL/issues/1814
 
-+ malloc的开销没那么高
-+ 可以内部管理buffer块
+https://github.com/microsoft/STL/issues/1814#issuecomment-845572895
 
-### 小包合包
+## fmtlib 8.0 的变化和问题
 
-[ipv4 帧结构][5] [ipv6 帧结构][6] 的一帧的长度有16bit，即最大64KB。[UDP 帧结构][7] 里的长度也是16bit。
-[TCP 帧结构][8] 不包含长度信息，但是一个TCP包分片不会超过上层协议的 MTU 值。
+constexpr
 
-> 更多关于MTU可以见: https://en.wikipedia.org/wiki/Maximum_transmission_unit
+GCC下模板通用引用对 `fmt::format_string<...>` 的透传。
 
-### 大包分包
+```cpp
+template <typename Char, typename... Args> class basic_format_string {
+ private:
+  basic_string_view<Char> str_;
 
-### 数据压缩
+ public:
+  template <typename S,
+            FMT_ENABLE_IF(
+                std::is_convertible<const S&, basic_string_view<Char>>::value)>
+  FMT_CONSTEVAL basic_format_string(const S& s) : str_(s) {
+    static_assert(
+        detail::count<
+            (std::is_base_of<detail::view, remove_reference_t<Args>>::value &&
+             std::is_reference<Args>::value)...>() == 0,
+        "passing views as lvalues is disallowed");
+#ifdef FMT_HAS_CONSTEVAL
+    if constexpr (detail::count_named_args<Args...>() == 0) {
+      using checker = detail::format_string_checker<Char, detail::error_handler,
+                                                    remove_cvref_t<Args>...>;
+      detail::parse_format_string<true>(str_, checker(s, {}));
+    }
+#else
+    detail::check_format_string<Args...>(s);
+#endif
+  }
+  basic_format_string(basic_runtime<Char> r) : str_(r.str) {}
 
-## 网络层
+  FMT_INLINE operator basic_string_view<Char>() const { return str_; }
+};
 
-[io_uring][3] [liburing][4]
+#if FMT_GCC_VERSION && FMT_GCC_VERSION < 409
+// Workaround broken conversion on older gcc.
+template <typename... Args> using format_string = string_view;
+template <typename S> auto runtime(const S& s) -> basic_string_view<char_t<S>> {
+  return s;
+}
+#else
+template <typename... Args>
+using format_string = basic_format_string<char, type_identity_t<Args>...>;
+// Creates a runtime format string.
+template <typename S> auto runtime(const S& s) -> basic_runtime<char_t<S>> {
+  return {{s}};
+}
+#endif
 
-benchmark: https://github.com/frevib/io_uring-echo-server/blob/master/benchmarks/benchmarks.md
+// ================
+template <typename OutputIt, typename... T,
+          FMT_ENABLE_IF(detail::is_output_iterator<OutputIt, char>::value)>
+auto vformat_to_n(OutputIt out, size_t n, string_view fmt, format_args args)
+    -> format_to_n_result<OutputIt> {
+  using buffer =
+      detail::iterator_buffer<OutputIt, char, detail::fixed_buffer_traits>;
+  auto buf = buffer(out, n);
+  detail::vformat_to(buf, fmt, args, {});
+  return {buf.out(), buf.count()};
+}
 
-### 连接链路复用
-
-连接复用类似 https://github.com/v2fly/v2fly-github-io/blob/master/docs/developer/protocols/muxcool.md
-
-### 传输层和安全
-
-+ TLS
-+ QUIC
-+ h2
-+ websocket
-+ TCP
-+ Unix socket
-+ 其他
-
-### 代理和鉴权
-
-+ 连接认证
-+ 空连接保护
-+ (由上层通知)包错误和初始成功
-+ 心跳
-
-## 节点管理
-
-+ 来源节点
-
-## 跨平台和C Binding
-
-## 运行时托管
-
-+ Rust: smol
-+ Rust: async_std
-
-## 云原生支持
-
-+ 基于CRD的服务发现和代理
-  + 必须指定目标ID
-+ [istio][9]/[openservicemesh][10] 基于标签的路由
-  + 需要部署的时候显式设置UUID
-  + 无法收敛连接
-+ [Envoy][11]代理扩展
-  + 侵入式
-  + 开发维护难度高
-
-### 内网访问
-
-### 对外服务
-
-[1]: https://github.com/protocolbuffers/protobuf
-[2]: https://github.com/atframework/libatbus
-[3]: https://kernel.dk/io_uring.pdf
-[4]: https://github.com/axboe/liburing
-[5]: https://tools.ietf.org/html/rfc791#section-3.1
-[6]: https://tools.ietf.org/html/rfc8200#section-3
-[7]: https://tools.ietf.org/html/rfc768
-[8]: https://tools.ietf.org/html/rfc793#page-15
-[9]: https://istio.io/
-[10]: https://openservicemesh.io/
-[11]: https://www.envoyproxy.io/
+/**
+  \rst
+  Formats ``args`` according to specifications in ``fmt``, writes up to ``n``
+  characters of the result to the output iterator ``out`` and returns the total
+  (not truncated) output size and the iterator past the end of the output range.
+  \endrst
+ */
+template <typename OutputIt, typename... T,
+          FMT_ENABLE_IF(detail::is_output_iterator<OutputIt, char>::value)>
+FMT_INLINE auto format_to_n(OutputIt out, size_t n, format_string<T...> fmt,
+                            const T&... args) -> format_to_n_result<OutputIt> {
+  return vformat_to_n(out, n, fmt, fmt::make_format_args(args...));
+}
+```
