Add notes for fmtlib's flaw
Signed-off-by: owent <admin@owent.net>

--- a/source/post/2021/2108.md
+++ b/source/post/2021/2108.md
@@ -33,9 +33,20 @@ https://github.com/microsoft/STL/issues/1814#issuecomment-845572895
 
 ## fmtlib 8.0 的变化和问题
 
-constexpr
++ constexpr
++ GCC下模板通用引用对 `fmt::format_string<...>` 的透传。
 
-GCC下模板通用引用对 `fmt::format_string<...>` 的透传。
+```bash
+/usr/include/fmt/core.h:2835:17: note: ‘consteval fmt::v8::basic_format_string<Char, Args>::basic_format_string(const S&) [with S = fmt::v8::basic_format_string<char, test_custom_object_for_log_formatter&>; typename std::enable_if<std::is_convertible<const S&, fmt::v8::basic_string_view<Char> >::value, int>::type <anonymous> = 0; Char = char; Args = {test_custom_object_for_log_formatter}]’ is not usable as a ‘constexpr’ function because:
+ 2835 |   FMT_CONSTEVAL basic_format_string(const S& s) : str_(s) {
+      |                 ^~~~~~~~~~~~~~~~~~~
+/usr/include/fmt/core.h:2835:51: error: call to non-‘constexpr’ function ‘fmt::v8::basic_format_string<Char, Args>::operator fmt::v8::basic_string_view<Char>() const [with Char = char; Args = {test_custom_object_for_log_formatter&}]’
+ 2835 |   FMT_CONSTEVAL basic_format_string(const S& s) : str_(s) {
+      |                                                   ^~~~~~~
+/usr/include/fmt/core.h:2853:14: note: ‘fmt::v8::basic_format_string<Char, Args>::operator fmt::v8::basic_string_view<Char>() const [with Char = char; Args = {test_custom_object_for_log_formatter&}]’ declared here
+ 2853 |   FMT_INLINE operator basic_string_view<Char>() const { return str_; }
+      |              ^~~~~~~~
+```
 
 ```cpp
 template <typename Char, typename... Args> class basic_format_string {
@@ -108,3 +119,7 @@ FMT_INLINE auto format_to_n(OutputIt out, size_t n, format_string<T...> fmt,
   return vformat_to_n(out, n, fmt, fmt::make_format_args(args...));
 }
 ```
+
+上面的 `const T&... args` 本应该是 `T&&... args` 。
+
+导致外层 format_string 和里层不一样，没有触发拷贝构造而是走了隐式类型转换。
