--- a/source/post/2021/2108.md
+++ b/source/post/2021/2108.md
@@ -25,6 +25,26 @@ https://en.cppreference.com/w/cpp/utility/format
 
 `format_to_n` : `size()` -> `_Count()`
 
+```cpp
+template <class _Ty>
+class _Fmt_buffer {
+private:
+  _Ty* _Ptr_        = nullptr;
+  size_t _Size_     = 0;
+  size_t _Capacity_ = 0;
+
+protected:
+  explicit _Fmt_buffer(const size_t _Size) noexcept : _Size_(_Size), _Capacity_(_Size) {}
+  // ...
+
+public:
+  _NODISCARD size_t _Size() const noexcept {
+    return _Size_;
+  }
+  // ...
+};
+```
+
 ## Visual Studio 2019 version 16.11 的变化
 
 https://github.com/microsoft/STL/issues/1814
