--- a/source/post/2013/811.md
+++ b/source/post/2013/811.md
@@ -716,7 +716,7 @@ typedef ssl::stream<tcp::socket> ssl_socket;
 
 结论： 不知道为什么，压力再也上不去了， 我是把输出重定向到文件的，所以开始以为是磁盘IO爆了，写出日志次数太多，但是gperftools显示磁盘IO占用并不高，性能分布还是比较平均的。但是基本上就在16万个报文了(每个包有一次发送长度的包[4字节]和一次数据的send[不定长])
 
-测试代码地址： https://gist.github.com/owt5008137/5660983 
+测试代码地址： https://gist.github.com/owent/5660983 
 profile性能分析报告: http://api.owent.net/resource/doc/link/test.asio.pdf
 
 
