--- a/source/post/2014/1000.md
+++ b/source/post/2014/1000.md
@@ -21,7 +21,7 @@ date: 2014-03-05 21:52:49
 
 今年准备安安心心写一个协程库。一方面是觉得协程挺有意思，另一方面也是因为C/C++在这方面没有一个非常权威的解决方案。
 按照我自己风格还是喜欢C++，所以协程库定名为 libcopp 。
-源码托管在 github: [https://github.com/owt5008137/libcopp](https://github.com/owt5008137/libcopp)
+源码托管在 github: [https://github.com/owent/libcopp](https://github.com/owent/libcopp)
 镜像托管 [http://git.oschina.net/owent/distinctionpp](http://git.oschina.net/owent/distinctionpp)
 
 # 首先介绍: 什么是协程
@@ -77,7 +77,7 @@ date: 2014-03-05 21:52:49
 
 目前实现的设计图如下：
 
-![](https://raw.github.com/owt5008137/libcopp/master/doc/graph/main_frame.png)
+![](https://raw.github.com/owent/libcopp/master/doc/graph/main_frame.png)
 协程对象视图
 
 这是目前实现中的协程对象管理。文档还比较缺失，大致框架已经完成，并且实现了几种常规的allocator和简单的测试（顺便当sample用）。
