--- a/source/post/2014/1060.md
+++ b/source/post/2014/1060.md
@@ -150,7 +150,7 @@ public:
 ------
 为什么要关心lambda表达式的类型呢？这关系到一些兼容型api的实现。
 首先，如果用std::function绑定lambda表达式，它会走仿函数的执行流程，而不是函数的。（关于std::function实现原理可以参照: [std和boost的function与bind实现剖析](//www.owent.net/2013/938.html)）
-其次，是因为我在设计之前的[协程任务框架](https://github.com/owt5008137/libcopp)的API的时候，碰上了一些麻烦。
+其次，是因为我在设计之前的[协程任务框架](https://github.com/owent/libcopp)的API的时候，碰上了一些麻烦。
 
 这个麻烦起源于对任务系统的一个接口设计。
 我们先来看看微软PPL库的线程任务系统的一个有意思的接口。
@@ -170,7 +170,7 @@ t1.then([_this](StorageFile^ resultOp){
 但是它这里有一点比较重要的是，它的task必须指定返回值且必须返回类型一致。
 
 而在我这里的任务接口里，我希望的是统一有一个int型的返回值（仿照进程执行结果只返回一个int型）。并且如果task的action函数是一个int型返回值的，接受它成为task返回码，否则使用默认的0作为返回值。
-目标是使其支持类似如下形式的调用：（参见: https://github.com/owt5008137/libcopp/blob/master/sample/sample_task_with_lambda.cpp ）
+目标是使其支持类似如下形式的调用：（参见: https://github.com/owent/libcopp/blob/master/sample/sample_task_with_lambda.cpp ）
 ```cpp
 // create a task using lambda expression
 my_task_t::ptr_t first_task = my_task_t::create([&](){
