--- a/source/post/2014/1081.md
+++ b/source/post/2014/1081.md
@@ -18,7 +18,7 @@ date: 2014-07-14 19:28:49
 
 ## INI 配置读取库发布
 
-Github地址: https://github.com/owt5008137/libiniloader
+Github地址: https://github.com/owent/libiniloader
 
 OSChina镜像: http://git.oschina.net/owent/libiniloader
 
@@ -143,4 +143,4 @@ int main(){
 }
 ```
 
-其他详细文档清参照 [github](https://github.com/owt5008137/libiniloader) 或[oschina](http://git.oschina.net/owent/libiniloader) 里的项目说明和ini_loader.h文件内注释。
+其他详细文档清参照 [github](https://github.com/owent/libiniloader) 或[oschina](http://git.oschina.net/owent/libiniloader) 里的项目说明和ini_loader.h文件内注释。
