--- a/source/post/2015/1142.md
+++ b/source/post/2015/1142.md
@@ -45,11 +45,11 @@ date: 2015-02-25 15:12:41
 
 # 新增的开源项目
 
-1.  [WP Code Highlight.js](https://github.com/owt5008137/WP-Code-Highlight.js)
+1.  [WP Code Highlight.js](https://github.com/owent/WP-Code-Highlight.js)
 2.  [libatbus](https://github.com/atframework/libatbus)
 3.  [xresloader](https://github.com/xresloader/xresloader)
-4.  [libiniloader](https://github.com/owt5008137/libiniloader)
-5.  [client-debuger](https://github.com/owt5008137/client-debuger)
+4.  [libiniloader](https://github.com/owent/libiniloader)
+5.  [client-debuger](https://github.com/owent/client-debuger)
 
 # 2014年的规划完成情况
 
@@ -69,9 +69,9 @@ date: 2015-02-25 15:12:41
 
 今年在项目大量使用[cmake](http://cmake.org/)以后，我也开始编写一些[cmake](http://cmake.org/)的通用模块，但是现在还没有搞得很成熟，所以也暂时没分享出来。
 
-其实c++方面，之前搞[libcopp](https://github.com/owt5008137/libcopp)的时候想研究下[gcc](http://gcc.gnu.org/)是怎么做动态栈的，然后加一个最大动态栈限制、然后让老的[gcc](http://gcc.gnu.org/)版本使用[libcopp](https://github.com/owt5008137/libcopp)的时候也能使用动态栈，甚至vc也能用。逐步看了些源码之后发现和abi有关，挺复杂的就作罢了。
+其实c++方面，之前搞[libcopp](https://github.com/owent/libcopp)的时候想研究下[gcc](http://gcc.gnu.org/)是怎么做动态栈的，然后加一个最大动态栈限制、然后让老的[gcc](http://gcc.gnu.org/)版本使用[libcopp](https://github.com/owent/libcopp)的时候也能使用动态栈，甚至vc也能用。逐步看了些源码之后发现和abi有关，挺复杂的就作罢了。
 
-web方面我开始用[markdown](http://zh.wikipedia.org/zh/Markdown)来写作，主要是找到几个不错的工具，[gaccob](http://gaccob.com/)同时向我介绍了[latex](http://zh.wikipedia.org/zh/LaTeX)，我试了一下发现虽然功能很强大，但是过于复杂了，像我这种写blog又不是写书的，用起来还是不方便。所以最终还是转向[markdown](http://zh.wikipedia.org/zh/Markdown)，然后wordpress使用[markdown](http://zh.wikipedia.org/zh/Markdown)代码高亮没有太好的方案，于是[WP Code Highlight.js](https://github.com/owt5008137/WP-Code-Highlight.js) 项目就诞生了。但是我以前写的文章都是用[SyntaxHighlighter](http://alexgorbatchev.com/SyntaxHighlighter/)来高亮的，我又很懒不愿写工具转已发布的文章内容，所以做了对[SyntaxHighlighter](http://alexgorbatchev.com/SyntaxHighlighter/)和[prettify](https://code.google.com/p/google-code-prettify/)的兼容。
+web方面我开始用[markdown](http://zh.wikipedia.org/zh/Markdown)来写作，主要是找到几个不错的工具，[gaccob](http://gaccob.com/)同时向我介绍了[latex](http://zh.wikipedia.org/zh/LaTeX)，我试了一下发现虽然功能很强大，但是过于复杂了，像我这种写blog又不是写书的，用起来还是不方便。所以最终还是转向[markdown](http://zh.wikipedia.org/zh/Markdown)，然后wordpress使用[markdown](http://zh.wikipedia.org/zh/Markdown)代码高亮没有太好的方案，于是[WP Code Highlight.js](https://github.com/owent/WP-Code-Highlight.js) 项目就诞生了。但是我以前写的文章都是用[SyntaxHighlighter](http://alexgorbatchev.com/SyntaxHighlighter/)来高亮的，我又很懒不愿写工具转已发布的文章内容，所以做了对[SyntaxHighlighter](http://alexgorbatchev.com/SyntaxHighlighter/)和[prettify](https://code.google.com/p/google-code-prettify/)的兼容。
 
 [xresloader](https://github.com/xresloader/xresloader)是之前一直想做的转表工具，应为之前在公司用得转表工具配置好复杂，并且命令行版本很不好用，GUI版本一般般，还有很多很烦的编码问题，还拿不到源码。所以干脆重写一个。为了跨平台使用了java，效果不错。感觉性能一般，但是关键是跨平台而且开源哇。而且做了c++、lua、和pbc版本的读取器。还是比较爽的，有源码要拓展也是比较简单的。
 
