--- a/source/post/2015/1194.md
+++ b/source/post/2015/1194.md
@@ -17,14 +17,14 @@ libcopp更新 (merge boost 1.59 context)
 
 之前由于兴趣写了一个[协程框架](https://www.owent.net/2014/1000.html)，目前这个框架已经投入项目中使用。
 
-这个框架的上下文部分是使用了[boost.context](http://www.boost.org/doc/libs/1_59_0/libs/context)，但是从开始写[libcopp](https://github.com/owt5008137/libcopp)到现在，boost.context也更新了几个版本。而之前几次merge基本都是简单地跟进了*make_fcontext*和*jump_fcontext*两个函数，这次就再稍微翻了一遍其他部分的代码。
+这个框架的上下文部分是使用了[boost.context](http://www.boost.org/doc/libs/1_59_0/libs/context)，但是从开始写[libcopp](https://github.com/owent/libcopp)到现在，boost.context也更新了几个版本。而之前几次merge基本都是简单地跟进了*make_fcontext*和*jump_fcontext*两个函数，这次就再稍微翻了一遍其他部分的代码。
 
 boost.context的变化
 ------
 
 首先是它在非windows栈分配的时候，增加了valgrind的适配。不过boost.context里的不同平台的栈缓冲区其实结构差不多，但是boost的实现里给复制粘贴了很多遍，所以我就干脆把这些地方合并啦。减少了一些重复代码。
 
-从1.58开始，boost.context增加了一个东东叫**execute_context**。看了下定位基本就是和我的[libcopp](https://github.com/owt5008137/libcopp)里的**copp**部分（也就是不包括**cotask**）一样。但是它实现地比较简单，不像**copp**，**execute_context**的执行回调直接使用了*boost::function<T>*,而**copp**里另外定义了一个*runner*。
+从1.58开始，boost.context增加了一个东东叫**execute_context**。看了下定位基本就是和我的[libcopp](https://github.com/owent/libcopp)里的**copp**部分（也就是不包括**cotask**）一样。但是它实现地比较简单，不像**copp**，**execute_context**的执行回调直接使用了*boost::function<T>*,而**copp**里另外定义了一个*runner*。
 
 不过从实现上来说，**boost.context**做了一个优化，就是把*runner*的*boost::function<T>*直接放进了分配的栈里，减少了一次内存分配的操作，这么做的缺点就是，每个**execute_context**的创建，都必须复制调仿函数，如果仿函数复制会造成其他复制开销的话，那也是不可避免的。而**copp**的设计则是每个**coroutine_context_container**。都需要指定*runner*，而这些*runner*是可以被多个**coroutine_context_container**共享的。
 
@@ -38,7 +38,7 @@ boost.context的变化
 
 变更列表
 ------
-[libcopp](https://github.com/owt5008137/libcopp)的近期的变动如下：
+[libcopp](https://github.com/owent/libcopp)的近期的变动如下：
 1. 跟进上下文初始化和切换的汇编代码更新
 2. 跟进增加了pe下的gnu as支持的上下文汇编支持（但是貌似不太正常）
 3. 跟进增加了**valgrind**支持
