--- a/source/post/2015/1203.md
+++ b/source/post/2015/1203.md
@@ -10,9 +10,9 @@ tags:
 
 近期的活动比较零散，主要的业余精力都放在了[libatbus](https://github.com/atframework/libatbus)上了。但是这个一时半会也写不完，所以能整理出来的东西不多。就说下最近跟进的开源代码吧。
 
-**首先是**，跨平台协程框架 [libcopp](https://github.com/owt5008137/libcopp) 跟进merge了boost 1.60 的context组件，这部分改动不多。仅仅是例行合并。
+**首先是**，跨平台协程框架 [libcopp](https://github.com/owent/libcopp) 跟进merge了boost 1.60 的context组件，这部分改动不多。仅仅是例行合并。
 
-**然后是**wordpress的代码高亮插件，[WP-Code-Highlight.js](https://github.com/owt5008137/WP-Code-Highlight.js)，跟进使用了highlight.js 9.0.0版本，同样的我提交了以一个pull request到百度CDN，但是百度CDN都不会自动拉取cdnjs的仓库而且需要2-4周才会接受，所以到时候还要为这个百度的CDN额外加一个版本号。另外一个重要的变更就是highlight.js 9.0.0改变了文件名命名方式，这个比较麻烦，会导致新的主题名称和老的不一致。我没有花太多时间去处理这个问题，先简单地在升级完成后把无效的主题设置都改成了default。另外就是如果用的CDN只有老的highlight.js版本，可能生成的新的主题名称会404。涉及的主题主要是文件名里带减号（-）和点（.）的。我自己用的googlecode的style问题倒是不大。
+**然后是**wordpress的代码高亮插件，[WP-Code-Highlight.js](https://github.com/owent/WP-Code-Highlight.js)，跟进使用了highlight.js 9.0.0版本，同样的我提交了以一个pull request到百度CDN，但是百度CDN都不会自动拉取cdnjs的仓库而且需要2-4周才会接受，所以到时候还要为这个百度的CDN额外加一个版本号。另外一个重要的变更就是highlight.js 9.0.0改变了文件名命名方式，这个比较麻烦，会导致新的主题名称和老的不一致。我没有花太多时间去处理这个问题，先简单地在升级完成后把无效的主题设置都改成了default。另外就是如果用的CDN只有老的highlight.js版本，可能生成的新的主题名称会404。涉及的主题主要是文件名里带减号（-）和点（.）的。我自己用的googlecode的style问题倒是不大。
 
 **还有**，gcc的已经release 5.3了，但是并没有跟进最新的编译脚本，是因为我这里都是编译整个工具链，而gcc早就移除了对cloog的依赖，最后一个还依赖cloog的组件是binutils，按时间估计也快要发布新版了。所以干脆等它好了一起移除对cloog的依赖。而且这个版本的gdb 7.10.1 的编译头文件有问题，在某些不默认包含某个头文件的环境下编译不通过。也到时候一起整好了。
 
