--- a/source/post/2016/1226.md
+++ b/source/post/2016/1226.md
@@ -250,7 +250,7 @@ VoteGranted (同样我认为这里用返回码更好) | 如果收到同意票，
 #### 负载均衡和容灾通知(主节点变更)
 通知Client主节点变更可以和[Redis Cluster](http://redis.io/topics/cluster-spec)一样，论文里给出的方法就是和[Redis Cluster](http://redis.io/topics/cluster-spec)的一样。这要求Client需要能处理超时、重发和主节点变更的情况。
 
-具体对接的代码可以参考我之前对[Redis Cluster](http://redis.io/topics/cluster-spec)的接入代码库[hiredis-happ](https://github.com/owt5008137/hiredis-happ)或者Redis作者提供的阻塞的Ruby版本[redis-rb-cluster](https://github.com/antirez/redis-rb-cluster) （不过目前为止这个Redis作者接入的Client还没我这个完整，可能是他并没有话太多精力在Client上吧。另外他只接入了同步API，我只接入了异步API）。
+具体对接的代码可以参考我之前对[Redis Cluster](http://redis.io/topics/cluster-spec)的接入代码库[hiredis-happ](https://github.com/owent/hiredis-happ)或者Redis作者提供的阻塞的Ruby版本[redis-rb-cluster](https://github.com/antirez/redis-rb-cluster) （不过目前为止这个Redis作者接入的Client还没我这个完整，可能是他并没有话太多精力在Client上吧。另外他只接入了同步API，我只接入了异步API）。
 
 不过我认为可以按我们目前写得聊天服务器的做法：如果客户端发送的目标不是主节点，集群内部做消息转发，然后回带给客户端主节点的地址。下一次客户端直接发给新的主节点。
 
