--- a/source/post/2017/1465.md
+++ b/source/post/2017/1465.md
@@ -109,7 +109,7 @@ func main() {
 }
 ```
 
-同时发布在了： https://gist.github.com/owt5008137/2286768f2586521600c9fd1700cbf845
+同时发布在了： https://gist.github.com/owent/2286768f2586521600c9fd1700cbf845
 
 测试结果如下：
 
@@ -184,10 +184,10 @@ Close 30000 goroutines cost 17999800ns, avg 599ns
 
 ## 结论
 
-go语言现在很火了，性能超过goroutine的话肯定是已经有实用价值了，特别是逻辑开销很容易就能抹平这个协程的开销。而且go语言本来还就是目标于高性能分布式系统的，并且很多这种分布式系统的一些逻辑可能并不特别重，都能容忍这个开销，何况[libcopp][1]呢。但是[libcopp][1]的v2版本细节上仍然还有一些优化点，比如内存布局和原子操作必导致L1 Cache失效的问题等等。等我一并处理完再merge回master。现在还是放在https://github.com/owt5008137/libcopp的v2分支里。
+go语言现在很火了，性能超过goroutine的话肯定是已经有实用价值了，特别是逻辑开销很容易就能抹平这个协程的开销。而且go语言本来还就是目标于高性能分布式系统的，并且很多这种分布式系统的一些逻辑可能并不特别重，都能容忍这个开销，何况[libcopp][1]呢。但是[libcopp][1]的v2版本细节上仍然还有一些优化点，比如内存布局和原子操作必导致L1 Cache失效的问题等等。等我一并处理完再merge回master。现在还是放在https://github.com/owent/libcopp的v2分支里。
 
 当然哪位大神有更好的建议希望能够不吝赐教。之前针对缓存优化的点，其实优化好了跑分会很好看，但是实用性上还得分场景。像[libcopp][1]的定位是比较重量级的场景，能够覆盖比较完整而且复杂的协程流程和逻辑，对于比较复杂的场景（比如我们游戏里），那些缓存优化就没太大意义。而对于那些简单的只是用来临时做上下文切换而且不要求跨平台跨编译器的，我还是建议使用类似[call_in_stack][2]这种轻量级的库，毕竟性能搞了一个数量级。
 
-[1]: https://github.com/owt5008137/libcopp
+[1]: https://github.com/owent/libcopp
 [2]: https://github.com/yuanzhubi/call_in_stack
 [3]: https://golang.org
