--- a/source/post/2017/1467.md
+++ b/source/post/2017/1467.md
@@ -30,10 +30,10 @@ type: post
 我迁移到静态博客系统主要是复刻主题。所以两个系统的主题都复刻了一遍，主框架是一样的，但是用了兼容两者的写法和配置吧。
 
 ## 移植主题
-我的Wordpress的博客用得是自己写得主题[distinctionpp](https://github.com/owt5008137/distinctionpp)。所以复刻了两个系统的主题：
+我的Wordpress的博客用得是自己写得主题[distinctionpp](https://github.com/owent/distinctionpp)。所以复刻了两个系统的主题：
 
-+ [hexo-theme-distinctionpp](https://github.com/owt5008137/hexo-theme-distinctionpp)
-+ [hugo-theme-distinctionpp](https://github.com/owt5008137/hugo-theme-distinctionpp)
++ [hexo-theme-distinctionpp](https://github.com/owent/hexo-theme-distinctionpp)
++ [hugo-theme-distinctionpp](https://github.com/owent/hugo-theme-distinctionpp)
 
 两个主题的功能和内容基本是保持一致的，除了有些无法实现的功能。比如[Hugo][2]很难支持把&lt;!-- toc --&gt;转为目录，只能固定地给所有文章开头加目录。
 
@@ -41,7 +41,7 @@ type: post
 
 然后顺便更新了下依赖库啥的，我毕竟不是搞前端的，所以懒得搞这种UI布局之类的东西，就直接用[bootstrap][10]了。不过我用的[bootstrap][10]的4.0，4.0必须加载它的js文件，而且还依赖[tether][1]，也导致多加载了几个文件。
 
-不过直接能用[bootstrap][10]的响应式布局还是蛮舒服的。以前的[distinctionpp](https://github.com/owt5008137/distinctionpp)主题的手机上显示还是看着蛮不爽的。而且现在还可以全部用相对大小，不再用px了。而且都不需要我自己去细调。
+不过直接能用[bootstrap][10]的响应式布局还是蛮舒服的。以前的[distinctionpp](https://github.com/owent/distinctionpp)主题的手机上显示还是看着蛮不爽的。而且现在还可以全部用相对大小，不再用px了。而且都不需要我自己去细调。
 
 顺便学了下用[sass][12]来写css，其实和以前[less][13]差不太多。只不过[bootstrap][10]开始转用[sass][12]了而且似乎现在[less][13]并没有[sass][12]活跃。而且导入[sass][12]之后还能使用一些bootstrap定义的函数什么的。还算方便吧。
 
@@ -54,7 +54,7 @@ type: post
 这个在[Hexo][1]里很方便，有人写了插件，安装就行了。但是[Hugo][2]就得自己集成了，还好反正不困难。然后我的Blog就支持公式了。并且我把以前一些文章的内容改成了公式。好看多了。
 
 ## 代码高亮
-原先我是写了Wordpress插件[WP-Code-Highlight.js](https://github.com/owt5008137/WP-Code-Highlight.js)。这里我就直接集成到主题里去了。而且也没其他什么很好的方法。两个系统自带的高亮都很渣，插件兼容性很糟糕。
+原先我是写了Wordpress插件[WP-Code-Highlight.js](https://github.com/owent/WP-Code-Highlight.js)。这里我就直接集成到主题里去了。而且也没其他什么很好的方法。两个系统自带的高亮都很渣，插件兼容性很糟糕。
 
 ## 搜索
 静态博客没有搜索功能嘛，所以我研究了下通过GET请求到搜索引擎来做站内搜索。但是有一些搜索引擎其实提供Search Box的功能，供你在网站里集成站内搜索，比如Google和DuckDuckGo。我看过最好的还是Google,但是国内Google太不稳定，所以我还是用了Bing的GET请求。目前主题里都是用的请求跳转到搜索引擎，不过说不定哪天我会有兴趣集成Search Box。
