--- a/source/post/2019/1901.md
+++ b/source/post/2019/1901.md
@@ -51,7 +51,7 @@ graph LR;
     二次打包-->Response;
 {{< /mermaid >}}
 
-这个流程。截至到我写这篇分享为止，回包还仅支持Markdown和Text两种。 先贴下成果吧： https://github.com/owt5008137/wxwork_robotd
+这个流程。截至到我写这篇分享为止，回包还仅支持Markdown和Text两种。 先贴下成果吧： https://github.com/owent/wxwork_robotd
 
 关于文献
 ----------------------------------------------
@@ -104,7 +104,7 @@ graph TB;
 ----------------------------------------------
 之前也提到rust的嵌入式小组提供了交叉编译的工具链 [cross][20] 。这其实是一套基于docker的工具链集合，帮我们把一些通用的依赖库和工具链准备好了，这样我们就不用每个环境自己去配交叉编译环境。 我就依赖这个部署了 appveyor和travis-ci的自动部署服务。
 
-在使用过程中我发现这套工具还不是非常稳定，特别是MIPS架构下有些很基础的库构建不出来，当然这也算是这些库的构建脚本或者代码有点问题。所以最终我只提供了我测试能够打包出来的几个版本，至少目前Linux的ARM、ARM64、x86、x86_64和和Windows的x86、x86_64没什么太大问题，部分架构下的musl工具链也编不出来。最终自动发布的结果都放在 https://github.com/owt5008137/wxwork_robotd/releases 了，以后发现有新的可用适配环境的话再加吧。
+在使用过程中我发现这套工具还不是非常稳定，特别是MIPS架构下有些很基础的库构建不出来，当然这也算是这些库的构建脚本或者代码有点问题。所以最终我只提供了我测试能够打包出来的几个版本，至少目前Linux的ARM、ARM64、x86、x86_64和和Windows的x86、x86_64没什么太大问题，部分架构下的musl工具链也编不出来。最终自动发布的结果都放在 https://github.com/owent/wxwork_robotd/releases 了，以后发现有新的可用适配环境的话再加吧。
 
 大家有兴趣也可以下载自己需要的架构的预编译好的机器人发布包自己Happy自己玩。配置大概这个样子：
 
@@ -173,7 +173,7 @@ graph TB;
     }]
 }
 ```
-当然实际配置里用的是标准json，所以是不支持注释的。上面的例子里projects只配了一个（访问地址为: http://127.0.0.1:12019/test_proj ），但是也是支持配多个的。[README.md](https://github.com/owt5008137/wxwork_robotd/blob/master/README.md) 里的用法说明应该还是比较完整易懂的。
+当然实际配置里用的是标准json，所以是不支持注释的。上面的例子里projects只配了一个（访问地址为: http://127.0.0.1:12019/test_proj ），但是也是支持配多个的。[README.md](https://github.com/owent/wxwork_robotd/blob/master/README.md) 里的用法说明应该还是比较完整易懂的。
 
 自动由CI发release包，之前美搞过。这次也是为了方便打包发布多架构平台试了下。这方面倒是没什么坑，appveyor在页面上由token加密工具。travis得用命令行，稍微麻烦点。
 
