--- a/source/post/2019/1912.md
+++ b/source/post/2019/1912.md
@@ -18,7 +18,7 @@ type: post
 
 前段时间有同事联系我想看看可能推广我之前写的协程库 [libcopp][1]，虽然 [libcopp][1] 已经用到过好几个项目上，这几年也断断续续地写了一些实现细节的文章，但是也但确实需要系统、概览性地介绍下 [libcopp][1] ，所以就有了这篇文章。
 
-Github: https://github.com/owt5008137/libcopp
+Github: https://github.com/owent/libcopp
 Document: https://libcopp.atframe.work/
 
 [libcopp][1] 的由来
@@ -78,7 +78,7 @@ Document: https://libcopp.atframe.work/
 
 [libcopp][1] 属于对称式有栈协程，有栈协程的基本原理很简单。不同平台，不同架构的架构下的 [ABI][37] 对函数调用都有一定的规范，比如 x86_64 的基本规范是要求函数的被调方保留好上一帧的 ```R12``` 、 ```R13``` 、 ```R14``` 、 ```R15``` 、 ```RBX``` 、 ```RBP``` （其他特殊的功能比如TSX或者Linux下GCC的动态栈还需要有其他的内容）， 在函数返回后还原，然后函数栈的起始地址有对齐要求。 而有栈协程即是把这些要求被调方处理的寄存器内容保存在栈上，然后直接jmp到新的执行地址即可。在跳回来以后需要还原这些寄存器，对调用方来说，就像调用了一个函数一样。
 
-我没有挨个平台去看 [ABI][37] 的文档，所以为了实现跨平台，我在 [libcopp][1] 里是直接引用了 [boost.context][13] 里的 fcontext 部分。但是我把它的平台判定和汇编层代码剥离出来并且重命名了符号，这样可以不依赖庞大的 [boost][13] 库，而且如果哪个项目要用 [boost][13] 也不会冲突。项目里的 [BOOST_LICENSE_1_0.txt](https://github.com/owt5008137/libcopp/blob/v2/BOOST_LICENSE_1_0.txt) 也是这个原因而存在。
+我没有挨个平台去看 [ABI][37] 的文档，所以为了实现跨平台，我在 [libcopp][1] 里是直接引用了 [boost.context][13] 里的 fcontext 部分。但是我把它的平台判定和汇编层代码剥离出来并且重命名了符号，这样可以不依赖庞大的 [boost][13] 库，而且如果哪个项目要用 [boost][13] 也不会冲突。项目里的 [BOOST_LICENSE_1_0.txt](https://github.com/owent/libcopp/blob/v2/BOOST_LICENSE_1_0.txt) 也是这个原因而存在。
 
 [libcopp][1] 大体上分为两部分.第一部分是 [copp][18] ，这部分主要负责偏底层的协程上下文管理、栈管理； 第二部分是 [cotask][19] ， 这部分主要用于一些更高层面的设计模式和基于协程的任务模型（包括但不限于进程内 **唯一ID分配** 、 **超时管理** 、 **await语义** 、 **自定义参数** 的关联和分配等等），还包含一个 ```task_manager``` 用于基于ID的统一管理和提供超时管理。
 
@@ -374,7 +374,7 @@ Document: https://libcopp.atframe.work/
 
 [libcopp][1] 刚开始的时候就是开源的，当时并没有什么特别的想法，只是说这样存取代码和交流会更方便些。 开源出来以后有一些小伙伴们提出过一些很实用的意见和建议，我也根据实际使用场景针对性地做了各种优化，也算查漏补缺吧。也同时特别感谢下 [mutouyun](http://orzz.org/) 和 [yuanzhubi](https://github.com/yuanzhubi) 都对一些实现细节提供了很多很有用的建议，也欢迎其他有兴趣的小伙伴们一起提意见和交流哈。
 
-[1]: https://github.com/owt5008137/libcopp
+[1]: https://github.com/owent/libcopp
 [2]: http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0973r0.pdf
 [3]: http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/n4736.pdf
 [4]: https://github.com/ultramanhu
@@ -391,8 +391,8 @@ Document: https://libcopp.atframe.work/
 [15]: https://github.com/yyzybb537/libgo
 [16]: https://github.com/yuanzhubi/call_in_stack
 [17]: https://github.com/Tencent/libco
-[18]: https://github.com/owt5008137/libcopp/tree/v2/include/libcopp
-[19]: https://github.com/owt5008137/libcopp/tree/v2/include/libcotask
+[18]: https://github.com/owent/libcopp/tree/v2/include/libcopp
+[19]: https://github.com/owent/libcopp/tree/v2/include/libcotask
 [20]: https://owent.net/2019/1911.html
 [21]: https://cmake.org/
 [22]: https://cmake.org/cmake/help/latest/manual/cpack.1.html
