--- a/source/post/2021/2109.md
+++ b/source/post/2021/2109.md
@@ -15,3 +15,19 @@ type: post
 
 ## 前言
 
+Write Ahead Log:
+
++ Log管理
+  + 存储数据库是什么类型: StorageT
+  + 透传到回调函数的自定义参数: CallbackParamT
+  + 保存在Log管理器对象数据里的用户自定义数据: PrivateDataT
+  + Log的类型: LogT
+  + Log的Key的类型: LogKeyT
+  + 如何比较Log Key（排序）: CompareLogKeyT
+  + 如何从Log中提取Action类型: ActionGetter
+    + 可以直接根据返回值推断
+  + 用于使用Hash Table按Action类型分类Action回调的 HashActionCaseT , EqualActionCaseT
++ 订阅者管理
+  + 保存在订阅者对象数据里的用户自定义数据: PrivateDataT
+  + 订阅者的Key类型: KeyT
+  + 用于使用Hash Table按按Key保存订阅者信息的 HashSubscriberKeyT , EqualSubscriberKeyT
