--- a/source/post/2021/2107.md
+++ b/source/post/2021/2107.md
@@ -63,7 +63,7 @@ set(CLANG_BOOTSTRAP_CMAKE_ARGS -C ${CMAKE_CURRENT_LIST_DIR}/distribution-stage2.
 
 然后，在Stage 1的设置文件里要给 `CLANG_BOOTSTRAP_TARGETS` 里包含 `install-distribution` 和 `install-distribution-stripped` (我尝试过和Example一样加 `install-distribution-toolchain` 的话会编不过，如果有知道为啥的小伙伴欢迎解答一下)。接下来，在Stage 2的设置文件里 `set(LLVM_DISTRIBUTION_COMPONENTS 要安装的组件列表)` 就可以了。接下来就是要精心选择需要的组件集合。
 
-## `LLVM_ENABLE_PROJECTS` 和 `LLVM_ENABLE_RUNTIMES`
+## `LLVM_ENABLE_PROJECTS` , `LLVM_ENABLE_RUNTIMES` 和 `LLVM_DISTRIBUTION_COMPONENTS`
 
 [LLVM][1] 的构建系统里分为 `LLVM_ENABLE_PROJECTS` 和 `LLVM_ENABLE_RUNTIMES` 两组配置。一些组件可以在 `LLVM_ENABLE_PROJECTS` 或 `LLVM_ENABLE_RUNTIMES` 里任选其一。有些只能在 `LLVM_ENABLE_PROJECTS` 里，同样有一些组件只能在 `LLVM_ENABLE_RUNTIMES` 里。那些可以在 `LLVM_ENABLE_PROJECTS` 或 `LLVM_ENABLE_RUNTIMES` 里任选其一的组件中，配在哪里会影响是否参与自举编译和是否install（因为我们最终是通过 `cmake --build . --config $BUILD_TYPE --target stage2 stage2-distribution` 来安装需要的组件的）。这些组件不能在两边同时存在，否则会生成多个同名的target。
 
@@ -85,6 +85,10 @@ set(LLVM_ENABLE_RUNTIMES "compiler-rt;libcxx;libcxxabi;libunwind" CACHE STRING "
 
 set(LLVM_TARGETS_TO_BUILD Native CACHE STRING "") # X86;ARM;AArch64;RISCV
 ```
+
+### `LLVM_DISTRIBUTION_COMPONENTS`
+
+最终安装的时候需要install哪些组件是写在 `LLVM_DISTRIBUTION_COMPONENTS` 里面的。官方给的Example的设置里都缺失一些我需要的组件。但是相对来说 [Fuchsia-stage2.cmake][12] 的设置相对来说比较全面。所以我最终使用的设置就是在 [Fuchsia-stage2.cmake][12] 的基础上，增加了 `llvm-as` , `llvm-addr2line` , `llvm-addr2line` , `llvm-config` , `llvm-elfabi` , `llvm-install-name-tool` , `llvm-jitlink` , `llvm-lto` , `llvm-lto2` , `llvm-ml` , `llvm-pdbutil` , `LLVM` , `LTO` , `Remarks` , `lldb` 及相关工具 , `libclang` 及相关库和头文件, `clang-check` , `clang-cpp` , `clang-libraries` , `scan-build` , `scan-view` , `pp-trace` , `modularize` , `opt-viewer` 。基本上就是补充了一些常用工具和这些工具的运行时依赖，比如说各类 Santinizer 好像是在 `clang-libraries` 这个 Component 里。
 
 ## 设置缓存
 
@@ -128,3 +132,4 @@ Stage 2的配置在 https://github.com/owent-utils/bash-shell/blob/main/LLVM%26C
 [9]: https://zlib.net/
 [10]: https://www.openssl.org
 [11]: https://github.com/owent-utils/bash-shell/tree/main/GCC%20Installer
+[12]: https://github.com/llvm/llvm-project/blob/main/clang/cmake/caches/Fuchsia-stage2.cmake
