--- a/source/post/2021/2108.md
+++ b/source/post/2021/2108.md
@@ -15,35 +15,45 @@ type: post
 
 ## 前言
 
-http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2019/p0645r10.html#format.formatter
-http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2021/p2216r3.html
-https://en.cppreference.com/w/cpp/utility/format
+C++20 正式发布已经有一段时间了。其中 `Text Formatting` 是一个我个人比较感兴趣的新组件。它主要是解决了之前字符串格式化库 ( `printf` 系 ) 的效率问题和运行时安全的问题。
+并且新的格式设置的形式也比较友好。相关规范和用法可以参见:
+
++ http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2019/p0645r10.html#format.formatter
++ http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2021/p2216r3.html
++ https://en.cppreference.com/w/cpp/utility/format
+
+在C++ 20能够普及以前，我们可以用 [fmtlib][1] 这个库来完成一样的功能。实际上我们项目组已经在这么做了。在使用 [fmtlib][1] 之前，比如我们按玩家打日志大概是这种形式。
+
+```cpp
+WLOGDEBUG("player %s(%u:%llu) int %d string %s string_view %s from server %llx", 
+          user.get_open_id().c_str(), user.get_zone_id(),
+          static_cast<unsigned long long>(user.get_user_id()),
+          123, str.c_str(), str_v.data(),
+          static_cast<unsigned long long>(server_inst_id));
+```
+
+之所以使用 `static_cast` 是因为这是在跨平台跨编译器无warning情况下的唯一方式。而在使用 [fmtlib][1] 之后，我们按玩家打印日志可以变成：
+
+```cpp
+FWLOGDEBUG("int {} string {} string_view {} from server {:#x}", 
+          user, 123, str.c_str(), str_v.data(), server_inst_id);
+```
+
+是不是简洁多了？
+
+于此同时，我们的构建系统改成了会检测编译环境是否支持 [C++20 Text Formatting][2] ，在支持的情况下使用 [C++20 Text Formatting][2] ，在不支持的情况下使用 [fmtlib][1] 。
+但是因为目前各大编译器和STL实现中，[C++20 Text Formatting][2] 还处于experiment阶段。并且 [C++20 Text Formatting][2] 和 [fmtlib][1] 多多少少还是有一些不同的地方。
+我们跨平台上就踩了一些坑，特此记录一下以便互相交流。
 
 ## 枚举类型的差异
 
+首先是对枚举类型处理的差异。如果没有自定义 `formatter` ，在 [fmtlib][1] 里是能够自动转换成整数类型的输出的，但是（至少是 MSVC）的 [C++20 Text Formatting][2] 实现里是不会自动转换的，我翻了一下ISO文档好像是没看到对是否隐式转换的说明。这里会造成一处适配上的问题。比如一些小伙伴习惯用的编译器不支持 [C++20 Text Formatting][2] 而fallback到了使用 [fmtlib][1] 实现的时候，可能会忘记这个手动转换。那么切到某些编译环境上使用 [C++20 Text Formatting][2] 的时候可能会编译不过，需要再适配一次。
+
 ## Visual Studio 2019 version 16.10(MSVC 1929）的BUG
 
-`format_to_n` : `size()` -> `_Count()`
+Visual Studio 2019 version 16.10(MSVC 1929）的第一个版本的实现中 `format_to_n` 实现有个BUG。里面某一层调用本该用它内部的 `_Count()` 或 `_Size()` 接口。但是用了 `size()` 。会导致编译不过。
 
-```cpp
-template <class _Ty>
-class _Fmt_buffer {
-private:
-  _Ty* _Ptr_        = nullptr;
-  size_t _Size_     = 0;
-  size_t _Capacity_ = 0;
-
-protected:
-  explicit _Fmt_buffer(const size_t _Size) noexcept : _Size_(_Size), _Capacity_(_Size) {}
-  // ...
-
-public:
-  _NODISCARD size_t _Size() const noexcept {
-    return _Size_;
-  }
-  // ...
-};
-```
+当时版本的代码已经找不到了，并且最新版本已经修复了这个问题。碰到同类问题的童鞋们可能直接更新VS版本就行了。
 
 ## Visual Studio 2019 version 16.11 的变化
 
@@ -143,3 +153,8 @@ FMT_INLINE auto format_to_n(OutputIt out, size_t n, format_string<T...> fmt,
 上面的 `const T&... args` 本应该是 `T&&... args` 。
 
 导致外层 format_string 和里层不一样，没有触发拷贝构造而是走了隐式类型转换。
+
+这个问题我已经提了 [Issue](https://github.com/fmtlib/fmt/issues/2462) 和 [PR](https://github.com/fmtlib/fmt/pull/2463) 了。目前已经合入了，估计下个版本就会包含进去。
+
+[1]: https://fmt.dev/
+[2]: https://en.cppreference.com/w/cpp/utility/format
