2108.md 的部分草稿
Signed-off-by: owentou <owentou@tencent.com>

--- a/source/post/2021/2108.md
+++ b/source/post/2021/2108.md
@@ -32,7 +32,9 @@ WLOGDEBUG("player %s(%u:%llu) int %d string %s string_view %s from server %llx",
           static_cast<unsigned long long>(server_inst_id));
 ```
 
-之所以使用 `static_cast` 是因为这是在跨平台跨编译器无warning情况下的唯一方式。而在使用 [fmtlib][1] 之后，我们按玩家打印日志可以变成：
+> 之所以使用 `static_cast<unsigned long long>(...)` 是因为这是在跨平台跨编译器开启 `-Wall` 或 `/W4` 的情况下，对 `uint64_t` 执行printf系接口报warning最简单的方法。
+
+在使用 [fmtlib][1] 之后，我们按玩家打印日志可以变成：
 
 ```cpp
 FWLOGDEBUG("int {} string {} string_view {} from server {:#x}", 
@@ -57,11 +59,20 @@ Visual Studio 2019 version 16.10(MSVC 1929）的第一个版本的实现中 `for
 
 ## Visual Studio 2019 version 16.11 的变化
 
-https://github.com/microsoft/STL/issues/1814
+我们项目组的构建系统使用的是cmake,在cmake 3.20以前，是不支持检测设置 `CXX_STANDARD` 到 `23` 的。在我们早期用的cmake版本中，最大支持的是C++20的检测，所以最大版本号写的就是 `set(CXX_STANDARD 20)` 。
 
-https://github.com/microsoft/STL/issues/1814#issuecomment-845572895
+这种情况下，同时在 Visual Studio 2019 version 16.10 之前，VS还没有 `/std:c++20` 选项，所以cmake会把C++标准设为 `/std:c++latest` 。但是 Visual Studio 2019 version 16.11 开始有了一些变化。相关的信息如下：
+
++ https://github.com/microsoft/STL/issues/1814
++ https://github.com/microsoft/STL/issues/1814#issuecomment-845572895
+
+简单地说就是 MSVC 对一些C++20特性的实现还没有进入ABI稳定期，所以在使用 `/std:c++20` 时并不会启用 C++20 里的一些内容，包括但不限于Text Formatting,Ranges等等。
+所以我们现在一方面是对高版本的cmake开到了 `set(CXX_STANDARD 23)` ，这样在 MSVC 下又会使用到 `/std:c++latest` 。另一方面针对MSVC的这种情况，在构建系统中对 [C++20 Text Formatting][2] 的检测脚本做了适配。
 
 ## fmtlib 8.0 的变化和问题
+
+[fmtlib][1] 其实有一个比直接用 [C++20 Text Formatting][2] 更好的地方。就在在GCC和Clang下，[fmtlib][1] 可以编译期验证输入格式字符串的合法性。
+但是这个特性在 [fmtlib][1] 8.0 开始有一个很大的变化。
 
 + constexpr
 + GCC下模板通用引用对 `fmt::format_string<...>` 的透传。
@@ -158,3 +169,4 @@ FMT_INLINE auto format_to_n(OutputIt out, size_t n, format_string<T...> fmt,
 
 [1]: https://fmt.dev/
 [2]: https://en.cppreference.com/w/cpp/utility/format
+[3]: https://cmake.org/
