--- a/source/post/2021/2106.md
+++ b/source/post/2021/2106.md
@@ -51,7 +51,7 @@ type: post
 
 上面提到的我尝试的使用 `--override_repository` 方式类似这样:
 
-```bazel
+```python
 maybe(
     http_archive,
     name = "com_github_grpc_grpc_legacy",
@@ -141,7 +141,7 @@ CMake内置了一个包仓库机制，有些依赖包会在安装的时候注册
 
 解决方法之一是直接改注册表, 可以用 powershell 脚本 `New-ItemProperty -Path "HKLM:\SYSTEM\CurrentControlSet\Control\FileSystem" -Name "LongPathsEnabled" -Value 1 -PropertyType DWORD -Force` 或者注册表文件
 
-```
+```bat
 Windows Registry Editor Version 5.00
 
 [HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\FileSystem]
