--- a/source/post/2021/2106.md
+++ b/source/post/2021/2106.md
@@ -7,9 +7,9 @@ date: 2021-06-05 22:38:45
 draft: false
 id: 2106
 tags: 
-  - rust
-  - linkedlist
-  - list
+  - cmake
+  - cmake-toolset
+  - buildsystem
 title: "重构基于CMake的构建工具链"
 type: post
 ---
