--- a/source/post/2021/2108.md
+++ b/source/post/2021/2108.md
@@ -104,7 +104,7 @@ template <typename S> auto runtime(const S& s) -> basic_runtime<char_t<S>> {
 #endif
 ```
 
-可以看到，在GCC 4.9以上货其他编译器，`format_string` 是其内部实现的 `basic_format_string` 这个结构。那么我们再来看看 `basic_format_string` 。
+可以看到，在GCC 4.9以上或其他编译器，`format_string` 是其内部实现的 `basic_format_string` 这个结构。那么我们再来看看 `basic_format_string` 。
 
 ```cpp
 template <typename Char, typename... Args> class basic_format_string {
@@ -137,7 +137,7 @@ template <typename Char, typename... Args> class basic_format_string {
 };
 ```
 
-这里的重点就来了。我们能看到， `basic_format_string` 的构造函数加上了 `FMT_CONSTEVAL` ，其实就是 `constexpr` 关键字。它的含义是可在编译期求值（注意和 `const` 关键字区分开来，一个函数和类型申明可以是 `constexpr` 但不是 `const` 的）。再加上 `format` 接口的申明是 `format_string` （ 我们关注它是 `basic_format_string` 的情况。），所以它接受一次隐式类型转换。即，调用 `format` 的时候格式字符串参数只要能隐式类型转换到 `basic_format_string` （注意要求编译期转换）就可以。这样我们就可以使用类似 ```fmt::format("Hello {}", "world")``` 这种写法。因为 `"Hello {}"` 是编译期常量。
+这里的重点就来了。我们能看到， `basic_format_string` 的构造函数加上了 `FMT_CONSTEVAL` ，其实就是 `consteval` 关键字。它的含义是可在编译期求值（注意和 `const` 关键字区分开来，一个函数和类型申明可以是 `consteval` 但不是 `const` 的）。再加上 `format` 接口的申明是 `format_string` （ 我们关注它是 `basic_format_string` 的情况。），所以它接受一次隐式类型转换。即，调用 `format` 的时候格式字符串参数只要能隐式类型转换到 `basic_format_string` （注意要求编译期转换）就可以。这样我们就可以使用类似 ```fmt::format("Hello {}", "world")``` 这种写法。因为 `"Hello {}"` 是编译期常量。
 
 但是在实际使用中，我们时而会对 `format` 接口包装一层，增加一下自己的处理。比如我们的日志接口：
 
