--- a/source/post/2018/1806.md
+++ b/source/post/2018/1806.md
@@ -92,12 +92,11 @@ libcopp+libcotask比单纯的libcopp多了进程内唯一ID的分配、状态转
 + ucontext 测试代码: https://gist.github.com/owent/1842b56ac1edd5a7db54590d41af1c44#file-ucontext_benchmark-cpp
 + [libgo][5] 测试代码: https://gist.github.com/owent/1842b56ac1edd5a7db54590d41af1c44#file-libgo_benchmark-cpp
 
-
 ### 【协程数：1，栈大小16KB】 - 切换耗时对比
 
 {{< chart >}}
 {
-  "type": "horizontalBar",
+  "type": "bar",
   "data": {
   "labels": [
     "libcopp",
@@ -167,9 +166,10 @@ libcopp+libcotask比单纯的libcopp多了进程内唯一ID的分配、状态转
 {{< /chart >}}
 
 ### 【协程数：1000，栈大小2MB】 - 创建耗时对比
+
 {{< chart >}}
 {
-  "type": "horizontalBar",
+  "type": "bar",
   "data": {
   "labels": [
     "libcopp+动态栈池",
@@ -243,7 +243,7 @@ libcopp+libcotask比单纯的libcopp多了进程内唯一ID的分配、状态转
 
 {{< chart >}}
 {
-  "type": "horizontalBar",
+  "type": "bar",
   "data": {
   "labels": [
     "libcopp+动态栈池",
@@ -313,11 +313,11 @@ libcopp+libcotask比单纯的libcopp多了进程内唯一ID的分配、状态转
 }
 {{< /chart >}}
 
-
 ### 【协程数：30000，栈大小64KB】 - 创建耗时对比
+
 {{< chart >}}
 {
-  "type": "horizontalBar",
+  "type": "bar",
   "data": {
   "labels": [
     "libcopp+动态栈池",
@@ -388,9 +388,10 @@ libcopp+libcotask比单纯的libcopp多了进程内唯一ID的分配、状态转
 {{< /chart >}}
 
 ### 【协程数：30000，栈大小64KB】 - 切换耗时对比
+
 {{< chart >}}
 {
-  "type": "horizontalBar",
+  "type": "bar",
   "data": {
   "labels": [
     "libcopp+动态栈池",
