--- a/source/post/2018/1806.md
+++ b/source/post/2018/1806.md
@@ -157,7 +157,7 @@ libcopp+libcotask比单纯的libcopp多了进程内唯一ID的分配、状态转
       "rgba(223, 127, 32, 1)"
     ],
     "borderWidth": 1,
-    "maxBarThickness": 5
+    "barThickness": "flex"
     }
   ]
   },
@@ -231,7 +231,7 @@ libcopp+libcotask比单纯的libcopp多了进程内唯一ID的分配、状态转
       "rgba(223, 127, 32, 1)"
     ],
     "borderWidth": 1,
-    "maxBarThickness": 5
+    "barThickness": "flex"
     }
   ]
   },
@@ -305,7 +305,7 @@ libcopp+libcotask比单纯的libcopp多了进程内唯一ID的分配、状态转
       "rgba(223, 127, 32, 1)"
     ],
     "borderWidth": 1,
-    "maxBarThickness": 5
+    "barThickness": "flex"
     }
   ]
   },
@@ -379,7 +379,7 @@ libcopp+libcotask比单纯的libcopp多了进程内唯一ID的分配、状态转
       "rgba(223, 127, 32, 1)"
     ],
     "borderWidth": 1,
-    "maxBarThickness": 5
+    "barThickness": "flex"
     }
   ]
   },
@@ -453,7 +453,7 @@ libcopp+libcotask比单纯的libcopp多了进程内唯一ID的分配、状态转
       "rgba(223, 127, 32, 1)"
     ],
     "borderWidth": 1,
-    "maxBarThickness": 5
+    "barThickness": "flex"
     }
   ]
   },
