--- a/source/post/2022/2205.md
+++ b/source/post/2022/2205.md
@@ -55,6 +55,7 @@ type: post
 + Python升级到 3.9而不是最新的 3.10，因为distcc(目前最新版本是3.4)不支持Python3.10
 + 允许通过环境变量 `REPOSITORY_MIRROR_URL_GNU` 来执行GNU软件包的下载源。
   > 如: `export REPOSITORY_MIRROR_URL_GNU=http://mirrors.tencent.com/gnu`
++ 增加了用于生成RPM包的配置
 
 ## LLVM,Clang,libc++,libc++abi等
 
@@ -74,7 +75,7 @@ type: post
 > 目前已经看到的又一个变化是 Fuchsia 里main分支已经包含bolt了，但是14.0里还没有。
 > 以后肯定还是会再Merge的。
 
-修改的内容如下:
+首先我们和 [GCC 工具链构建工具][1] 一样，我们也给 [LLVM,Clang,libc++,libc++abi工具链构建工具][2] 增加了用于生成RPM包的配置。，然后基于 Fuchsia 的配置修改的内容如下:
 
 + `LLVM_TARGETS_TO_BUILD` 改为 `Native` : 目前没有交叉编译需求，有了再说吧。只编译Native可以加快编译速度。
 + 注释掉所有的`set(*LIBCXX_ABI_VERSION 2*)` : ABI 2还未稳定
