--- a/source/post/2022/2205.md
+++ b/source/post/2022/2205.md
@@ -79,7 +79,10 @@ type: post
 
 + `LLVM_TARGETS_TO_BUILD` 改为 `Native` : 目前没有交叉编译需求，有了再说吧。只编译Native可以加快编译速度。
 + 注释掉所有的`set(*LIBCXX_ABI_VERSION 2*)` : ABI 2还未稳定
-+ `distribution-stage2.cmake` 里 `LLVM_INSTALL_TOOLCHAIN_ONLY` 改为 `OFF` : 我们需要开发包，这个ON的情况不能发布开发包。
++ ~`distribution-stage2.cmake` 里 `LLVM_INSTALL_TOOLCHAIN_ONLY` 改为 `OFF` : 我们需要开发包，这个ON的情况不能发布开发包。~
++ [`distribution-stage1.cmake`][11] 的 `BOOTSTRAP_CMAKE_SYSTEM_NAME` 内和 [`distribution-stage2.cmake`][12]
+  + `*LIBCXXABI_INSTALL_LIBRARY` 改为 `ON`
+  + `*LIBUNWIND_INSTALL_LIBRARY` 改为 `ON`
 + `distribution-stage1.cmake` 里 `CLANG_BOOTSTRAP_CMAKE_ARGS` 改为以下脚本: 只是为了更灵活一点
 
 ```cmake
@@ -132,8 +135,8 @@ message(STATUS "Stage2: LINUX_NATIVE_TARGET=${LINUX_NATIVE_TARGET}")
     + llvm-libtool-darwin
     + llvm-otool
   + 增加
-    + scan-build
-    + scan-view
+    + llc
+    + lli
     + llvm-addr2line
     + llvm-as
     + llvm-config
@@ -143,8 +146,13 @@ message(STATUS "Stage2: LINUX_NATIVE_TARGET=${LINUX_NATIVE_TARGET}")
     + llvm-jitlink
     + llvm-jitlistener
     + llvm-link
+    + llvm-mc
     + llvm-ml
     + llvm-strings
+    + llvm-lto
+    + llvm-lto2
+    + scan-build
+    + scan-view
   + 最后添加
     >
     > ```cmake
@@ -191,6 +199,7 @@ set(LLVM_DISTRIBUTION_ADDTIONAL_COMPONENTS
     modularize
     pp-trace
     opt-viewer
+    # unwind, cxx, cxxabi are already included in runtimes
     # From <llvm-project>/clang/cmake/caches/Apple-stage2.cmake
     Remarks
     # From <llvm-project>/clang/cmake/caches/MultiDistributionExample.cmake . These targets are development targets, and
