--- a/source/post/2022/2204.md
+++ b/source/post/2022/2204.md
@@ -26,7 +26,7 @@ type: post
 
 ## 基本原理
 
-首先，先简介一下这个分布式事务系统的基本原理。详细一点的可以看我之前一篇文章，《Google去中心化分布式系统论文三件套(Percolator、Spanner、F1)读后感》(https://owent.net/2019/1902.html) 。简单地流程如下:
+首先，先简介一下这个分布式事务系统的基本原理。详细一点的可以看我之前一篇文章，[《Google去中心化分布式系统论文三件套(Percolator、Spanner、F1)读后感》](https://owent.net/2019/1902.html) 。简单地流程如下:
 
 ![2204-01.png](2204-01.png)
 
