再补充说明
Signed-off-by: owent <admin@owent.net>

--- a/source/post/2022/2203.md
+++ b/source/post/2022/2203.md
@@ -192,7 +192,7 @@ class LIBATFRAME_UTILS_API_HEAD_ONLY wal_object {
   + (必须) 收到订阅心跳后调用 `receive_subscribe_request()`
 + 特殊功能点
   + 被移除的订阅者可选择是否发送最后的Log信息
-    > 通常涉及告诉该订阅者，你被移除了
+    > 通常涉及告诉该订阅者，你被移除了。比如公会移除成员的时候，需要通知该成员这条移除信息。
   + 新增的订阅者可选是否发送快照
     > 有时是订阅者重连，这时候其实不需要发快照，补Log即可。
     > 除了设置规则回调以外，有一个Trick的方法是通过 `set_last_removed_key(...)` 设置最后移除log key为(默认值+1), 然后分配log key由默认值+2开始
