--- a/source/post/2022/2204.md
+++ b/source/post/2022/2204.md
@@ -360,7 +360,7 @@ service ParticipatorService {
 
 ## 后续工作
 
-+ 性能优化。当前版本的RPC次数还比较多，事务单CPU核心的QPS只能到千级别，这个还能够有提升空间。
++ 性能优化。当前版本的RPC次数还比较多，事务单CPU核心的QPS只能到千级别，延迟100ms左右这个还能够有提升空间。
 + 锁的接触通知，目前我们按标准 [Wound-Wait][8] 流程锁冲突后随机延迟后重试，后面可以加入主动通知机制。这样能更快地解锁。
 + 可能还会有一些功能需求上的提升。
 + 使用示例
