--- a/source/post/2022/2201.md
+++ b/source/post/2022/2201.md
@@ -40,7 +40,7 @@ fpu_control_t cw = (_FPU_DEFAULT & ~_FPU_EXTENDED) | _FPU_RC_NEAREST | _FPU_SING
 _FPU_SETCW(cw);
 ```
 
-但是按照文档所说，这些控制字不影响 SSE 指令。而且非常令人沮丧的是，GCC和Clang的数学库都使用了SSE指令。另外在ARM架构中，没有浮点数的精度控制字，只能设置Round规则。
+但是按照文档所说，这些控制字不影响 SSE 指令。而且非常令人沮丧的是，GCC和Clang的数学库都使用了SSE指令，SSE2指令的控制字由单独的寄存器 `MXCSR` 控制。另外在ARM架构中，没有浮点数的精度控制字，只能设置Round规则。
 
 > ARM架构浮点数控制字文档:
 > + ARM - 32位
